--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "navbar-dropdown-v1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AndyVuLuong.github.io/",
+  "homepage": "https://AndyVuLuong.github.io/ReactWebsite",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
